fix db parse issue, upd authenticity-guarantee.hbs, header.hbs

--- a/src/app/html/pages/home.hbs
+++ b/src/app/html/pages/home.hbs
@@ -1,7 +1,7 @@
 {{!Home}}
 
-{{> layout/head }}
-{{> blocks/header }}
+{{> layout/head page-title="Infinite Selection"}}
+{{> blocks/header nav-menu=nav.home}}
 <main class="main">
   <section class="container intro-container">
     <div class="row intro">
