--- a/src/app/html/partials/layout/head.hbs
+++ b/src/app/html/partials/layout/head.hbs
@@ -2,18 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
+  >
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
-  <link rel="manifest" href="../assets/favicon/site.webmanifest">
-  <link rel="mask-icon" href="../assets/favicon/safari-pinned-tab.svg" color="#e68a2c">
-  <meta name="msapplication-TileColor" content="#603cba">
-  <meta name="theme-color" content="#ffffff">
+  {{>layout/favicon}}
 
-  <title>Infinite Selection</title>
+  <title>{{ page-title }}</title>
   <!-- Bootstrap CSS -->
   <link
     rel="stylesheet"
@@ -21,7 +18,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="../styles/vendors.min.css">
-  <link rel="stylesheet" href="../styles/styles.min.css">
+  <link rel="stylesheet" href="../styles/vendors.min.css?v={{cache}}">
+  <link rel="stylesheet" href="../styles/styles.min.css?v={{cache}}">
 </head>
 <body>
