upd pages structure

--- a/src/app/html/pages/authenticity-guarantee.hbs
+++ b/src/app/html/pages/authenticity-guarantee.hbs
@@ -1,7 +1,7 @@
 {{!Authenticity Guarantee}}
 
 {{> layout/head page-title="Infinite Selection - Authenticity Guarantee"}}
-{{> blocks/header nav-menu=nav.authenticity}}
+{{> blocks/header nav-menu=nav.header.authenticity}}
 <main class="main">
 
   <section class="authenticity-container container">
@@ -42,7 +42,7 @@
     <h2 class="action-text">
       Same Sneakers, Better Prices
     </h2>
-    <a href='browse-sneakers.hbs' class="infinite-button action-link">Rent Now</a>
+    <a href='browse-sneakers.html' class="infinite-button action-link">Rent Now</a>
     <img class="action-image" src="../assets/images/other/authenticity-action-image.png" alt="Just Do It">
   </section>
 
