--- a/src/app/html/partials/blocks/footer.hbs
+++ b/src/app/html/partials/blocks/footer.hbs
@@ -8,10 +8,15 @@
       </div>
       <div class="col-12 col-lg-5 footer-menu">
         <nav class="footer-nav">
-          <a class="footer-link" href='contact-us.html'>Contact Us</a>
-          <a class="footer-link" href='terms-of-service.html'>Terms of Services</a>
-          <a class="footer-link" href='privacy-policy.html'>Privacy Policy</a>
-          <a class="footer-link" href='faq.html'>FAQ</a>
+          {{#if footer-nav}}
+            {{#each footer-nav}}
+              {{>blocks/footer-link}}
+            {{/each}}
+          {{else}}
+            {{#each nav.footer.default}}
+              {{>blocks/footer-link}}
+            {{/each}}
+          {{/if}}
         </nav>
       </div>
       <div class="col-12 col-lg footer-socials">
