--- a/src/app/html/partials/layout/bottom.hbs
+++ b/src/app/html/partials/layout/bottom.hbs
@@ -20,10 +20,10 @@
   defer
 >
 </script>
-<!-- Font Awesome CSS -->
-<script src="../scripts/vendors.min.js" defer type="module"></script>
+<!-- Font Awesome -->
+<script src="../scripts/vendors.min.js?v={{cache}}" defer type="module"></script>
 <!-- Custom JS -->
-<script src="../scripts/main.min.js" defer></script>
+<script src="../scripts/main.min.js?v={{cache}}" defer></script>
 
 </body>
 </html>
