--- a/src/app/html/partials/layout/head.hbs
+++ b/src/app/html/partials/layout/head.hbs
@@ -11,6 +11,13 @@
   {{>layout/favicon}}
 
   <title>{{ page-title }}</title>
+
+  <!--Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Roboto:wght@300;400;500;700;900&display=swap"
+    rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link
     rel="stylesheet"
