--- a/src/app/html/partials/layout/bottom.hbs
+++ b/src/app/html/partials/layout/bottom.hbs
@@ -4,22 +4,20 @@
   integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
   crossorigin="anonymous"
   defer
->
-</script>
+></script>
 <script
   src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
   integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
   crossorigin="anonymous"
   defer
->
-</script>
+></script>
 <script
   src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
   crossorigin="anonymous"
   defer
->
-</script>
+></script>
+<script src="https://kit.fontawesome.com/9021eac6a4.js" crossorigin="anonymous" defer></script>
 <!-- Font Awesome -->
 <script src="../scripts/vendors.min.js?v={{cache}}" defer type="module"></script>
 <!-- Custom JS -->
