--- a/src/app/html/partials/blocks/header.hbs
+++ b/src/app/html/partials/blocks/header.hbs
@@ -21,7 +21,7 @@
         <a class="nav-text" href='login.html'>Login</a>
         <div class="searchbar">
           <input class="search_input" type="text" name="" placeholder="Search...">
-          <a href='search.html' class="search_icon"><span class="material-icons-outlined">search</span></a>
+          <a href='search.html' class="search_icon"><i class="fas fa-search"></i></a>
         </div>
         <a href="#" class="basket-icon">
 <!--          <span class="material-icons-outlined">shopping_basket</span>-->
