--- a/src/app/html/partials/layout/head.hbs
+++ b/src/app/html/partials/layout/head.hbs
@@ -18,7 +18,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Roboto:wght@300;400;500;700;900&display=swap"
     rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+<!--  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">-->
   <!-- Bootstrap CSS -->
   <link
     rel="stylesheet"
