--- a/src/app/styles/pages/core.scss
+++ b/src/app/styles/pages/core.scss
@@ -1,8 +1,9 @@
-/* @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto:300,400,500,700,900&display=swap'); */
-
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html,
