delete local fonts, upd templates

--- a/src/app/html/pages/authenticity-guarantee.hbs
+++ b/src/app/html/pages/authenticity-guarantee.hbs
@@ -2,8 +2,7 @@
 
 {{> layout/head page-title="Infinite Selection - Authenticity Guarantee"}}
 {{> blocks/header nav-menu=nav.header.authenticity}}
-<main class="main">
-
+<main class="page-content__main">
   <section class="authenticity-container container">
     <div class="row">
       <div class="col-12 col-lg-8 col-xl-6 mx-auto">
@@ -37,7 +36,6 @@
       </div>
     </div>
   </section>
-
   <section class="action">
     <h2 class="action-text">
       Same Sneakers, Better Prices
@@ -45,7 +43,6 @@
     <a href='browse-sneakers.html' class="infinite-button action-link">Rent Now</a>
     <img class="action-image" src="../assets/images/other/authenticity-action-image.png" alt="Just Do It">
   </section>
-
 </main>
 {{> blocks/footer }}
 {{> layout/bottom }}
