--- a/src/app/html/pages/browse-sneakers.hbs
+++ b/src/app/html/pages/browse-sneakers.hbs
@@ -3,7 +3,7 @@
 {{> layout/head page-title="Infinite Selection - Browse Sneakers"}}
 {{> blocks/header nav-menu=nav.header.browse}}
 
-<main class="main">
+<main class="page-content__main">
   <article class="container browse">
     <div class="row">
       <section class="col-12 col-md-8 col-lg-6 col-xl-3 browse-filter">
