--- a/src/app/html/pages/create-account.hbs
+++ b/src/app/html/pages/create-account.hbs
@@ -3,7 +3,7 @@
 {{> layout/head page-title="Infinite Selection - Create Account"}}
 {{> blocks/header nav-menu=nav.header.home}}
 
-<main class="main">
+<main class="page-content__main">
 
   <section class="container login-layout">
 
