--- a/src/app/html/pages/example.hbs
+++ b/src/app/html/pages/example.hbs
@@ -3,7 +3,7 @@
 {{> layout/head page-title="Infinite Selection - Sneakers Example"}}
 {{> blocks/header nav-menu=nav.header.home}}
 
-<main class="main">
+<main class="page-content__main">
 
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
