--- a/src/app/html/pages/home.hbs
+++ b/src/app/html/pages/home.hbs
@@ -3,7 +3,7 @@
 {{> layout/head page-title="Infinite Selection"}}
 {{> blocks/header page="home" nav-menu=nav.header.home}}
 
-<main class="main">
+<main class="page-content__main">
   <section class="container intro-container">
     <div class="row intro">
       <div class="col-lg-4 col-xl-5 order-2 order-lg-1">
@@ -23,7 +23,6 @@
       </div>
     </div>
   </section>
-
   <section class="container releases-section">
     <div class="row releases">
       <div class="col-12 releases-line d-flex justify-content-between">
@@ -84,7 +83,6 @@
       </div>
     </div>
   </section>
-
   <section class="homepage-authenticity">
     <div class="container">
       <div class="row">
@@ -99,7 +97,6 @@
       </div>
     </div>
   </section>
-
   <section class="clean">
     <h2 class="clean-text">
       How we clean
@@ -107,7 +104,6 @@
     <img class="clean-image" src="../assets/images/homepage-section/section-clean.jpg" alt="How we clean">
     <a href='how-we-clean.html' class="infinite-link mx-auto mx-lg-0">Learn More</a>
   </section>
-
   <section class="action">
     <h2 class="action-text infinite-title">
       Same Sneakers, Better Prices
@@ -115,7 +111,6 @@
     <a href='browse-sneakers.html' class="infinite-button action-link">Rent Now</a>
     <img class="action-image" src="../assets/images/homepage-section/section-action.png" alt="How we clean">
   </section>
-
   <article class="work-cycle">
     <div class="container">
       <section class="work-scheme">
@@ -277,7 +272,6 @@
     </div>
 
   </article>
-
   <section class="action-2">
     <h2 class="infinite-title action-2-text">
       Become the Sneakerhead You've Always Dreamed of
@@ -285,7 +279,6 @@
     <a href='browse-sneakers.html' class="infinite-button action-2-link">Rent Now</a>
     <img class="action-2-image" src="../assets/images/homepage-section/section-action-2.png" alt="Lucky You Are!">
   </section>
-
 </main>
 
 {{> blocks/footer }}
