--- a/src/app/html/pages/how-we-clean.hbs
+++ b/src/app/html/pages/how-we-clean.hbs
@@ -3,7 +3,7 @@
 {{> layout/head page-title="Infinite Selection - How We Clean"}}
 {{> blocks/header nav-menu=nav.header.clean}}
 
-<main class="main">
+<main class="page-content__main">
   <article class="container cleaning">
     <section class="row cleaning-banner">
       <div class="col-12 ">
