--- a/src/app/html/pages/ways-to-rent.hbs
+++ b/src/app/html/pages/ways-to-rent.hbs
@@ -3,7 +3,7 @@
 {{> layout/head page-title="Infinite Selection - Ways to Rent"}}
 {{> blocks/header nav-menu=nav.header.rent}}
 
-<main class="main">
+<main class="page-content__main">
 
   <section class="rent-banner">
     <img src="../assets/images/rent/rent-left.png" alt="Rent Image" class="rent-image rent-image-left">
