--- a/src/app/html/pages/contact-us.hbs
+++ b/src/app/html/pages/contact-us.hbs
@@ -3,7 +3,7 @@
 {{> layout/head page-title="Infinite Selection - Not found"}}
 {{> blocks/header nav-menu=nav.header.home}}
 
-<main class="main">
+<main class="page-content__main">
   <section class="container layout-404 ">
     <div class="text-container-404">
       <h2 class="infinite-title-main text-center">We lost this page</h2>
