--- a/src/app/html/pages/login.hbs
+++ b/src/app/html/pages/login.hbs
@@ -3,7 +3,7 @@
 {{> layout/head page-title="Infinite Selection - LogIn Page"}}
 {{> blocks/header nav-menu=nav.header.home}}
 
-<main class="main">
+<main class="page-content__main">
 
   <section class="container login-layout">
 
