--- a/src/app/html/pages/search.hbs
+++ b/src/app/html/pages/search.hbs
@@ -3,7 +3,7 @@
 {{> layout/head page-title="Infinite Selection - Search Page"}}
 {{> blocks/header page="home" nav-menu=nav.header.home}}
 
-<main class="main">
+<main class="page-content__main">
 
   <section class="container search">
 
