--- a/src/app/html/pages/terms-of-service.hbs
+++ b/src/app/html/pages/terms-of-service.hbs
@@ -3,7 +3,7 @@
 {{> layout/head page-title="Infinite Selection - Terms of Service"}}
 {{> blocks/header nav-menu=nav.header.home}}
 
-<main class="main">
+<main class="page-content__main">
 
   <section class="authenticity-container container">
     <div class="row">
