--- a/src/app/html/partials/blocks/footer.hbs
+++ b/src/app/html/partials/blocks/footer.hbs
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="page-content__footer footer">
   <div class="container">
     <div class="row footer-container">
       <div class="col-12 col-lg footer-logo-container">
