--- a/src/app/html/partials/layout/head.hbs
+++ b/src/app/html/partials/layout/head.hbs
@@ -18,7 +18,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Roboto:wght@300;400;500;700;900&display=swap"
     rel="stylesheet">
-<!--  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">-->
   <!-- Bootstrap CSS -->
   <link
     rel="stylesheet"
@@ -29,4 +28,4 @@
   <link rel="stylesheet" href="../styles/vendors.min.css?v={{cache}}">
   <link rel="stylesheet" href="../styles/styles.min.css?v={{cache}}">
 </head>
-<body>
+<body class="page-content">
