refactor: header; add: mixins; fix: gulp scripts

--- a/src/app/html/partials/blocks/menu-link.hbs
+++ b/src/app/html/partials/blocks/menu-link.hbs
@@ -1,3 +1,3 @@
-<li class="nav-item ">
-  <a class="nav-link{{#if current}} current-link{{/if}}" href="{{url}}">{{name}}</a>
+<li class="menu-item">
+  <a class="menu-item__link{{#if current}} menu-item__link--active{{/if}}" href="{{url}}">{{name}}</a>
 </li>
