--- a/src/app/styles/shared/core.scss
+++ b/src/app/styles/shared/core.scss
@@ -13,9 +13,8 @@ header {
   -webkit-overflow-scrolling: touch;
 }
 
-body {
-  font-size: 14px;
-  font-family: "Roboto", sans-serif;
+html {
+  font-family: "Roboto", "Arial", sans-serif;
 }
 
 a {
