--- a/src/app/html/partials/blocks/header.hbs
+++ b/src/app/html/partials/blocks/header.hbs
@@ -1,28 +1,54 @@
-<header class="page-content__header header" id="topPage">
-  <nav class="navbar navbar-expand-lg container">
-    <a class="basket-icon d-flex d-lg-none"></a>
-    <a class="navbar-brand brand-logo" href="{{#ifCond page 'home'}}#topPage{{else}}home.html{{/ifCond}}"></a>
-    <button
-      class="navbar-toggler collapsed" type="button" data-toggle="collapse"
-      data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon" id="mobileMenu"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav d-flex justify-content-between">
-        {{#each nav-menu}}
-          {{>blocks/menu-link}}
-        {{/each}}
-      </ul>
-    </div>
-    <div class="authorization-layout d-none d-lg-flex">
-      <a class="nav-text" href='login.html'>Login</a>
-      <div class="searchbar">
-        <input class="search_input" type="text" name="" placeholder="Search...">
-        <a href='search.html' class="search_icon"><i class="fas fa-search"></i></a>
+<header class="page-content__header header-main js-header" id="topPage">
+  <div class="container">
+    <div class="header-main__content">
+      <div class="header-main__toggle toggle-menu">
+        <button class="mobile-menu__btn" type="button">
+          <img src="../assets/images/logo/mobile-menu-icon.svg" class="mobile-menu__icon" alt="Mobile menu icon" />
+        </button>
       </div>
-      <a href="#" class=""><i class="basket-icon"></i></a>
+      <div class="header-main__brand">
+        {{#ifCond page "home"}}
+          <span class="header-main__brand-logo">
+            <img src="../assets/images/logo/logo-black.svg" alt="Our logo">
+          </span>
+        {{else}}
+          <a class="header-main__brand-logo" href="home.html">
+            <img src="../assets/images/logo/logo-black.svg" alt="Our logo">
+          </a>
+        {{/ifCond}}
+      </div>
+      <nav class="header-main__nav">
+        <ul class="header-main__nav-list">
+          {{#each nav-menu}}
+            {{>blocks/menu-link}}
+          {{/each}}
+        </ul>
+      </nav>
+      <div class="header-main__actions">
+        <div class="header-main__actions-item">
+          <a class="btn-inline" href="login.html">Login</a>
+        </div>
+        <div class="header-main__actions-item _ml-1">
+          <a href="search.html" class="btn-icon">
+            <svg aria-hidden="true" focusable="false" role="img" width="16" height="16" viewBox="0 0 20 20"
+                 fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M19.8633 18.3164L15.1211 13.5742C15.0313 13.4844 14.9141 13.4375 14.7891 13.4375H14.2734C15.5039 12.0117 16.25 10.1562 16.25 8.125C16.25 3.63672 12.6133 0 8.125 0C3.63672 0 0 3.63672 0 8.125C0 12.6133 3.63672 16.25 8.125 16.25C10.1562 16.25 12.0117 15.5039 13.4375 14.2734V14.7891C13.4375 14.9141 13.4883 15.0313 13.5742 15.1211L18.3164 19.8633C18.5 20.0469 18.7969 20.0469 18.9805 19.8633L19.8633 18.9805C20.0469 18.7969 20.0469 18.5 19.8633 18.3164ZM8.125 14.375C4.67187 14.375 1.875 11.5781 1.875 8.125C1.875 4.67187 4.67187 1.875 8.125 1.875C11.5781 1.875 14.375 4.67187 14.375 8.125C14.375 11.5781 11.5781 14.375 8.125 14.375Z"
+                fill="currentColor" />
+            </svg>
+          </a>
+        </div>
+        <div class="header-main__actions-item">
+          <button type="button" class="btn-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21.462 17.951"
+                 aria-hidden="true" focusable="false" role="img">
+              <path
+                fill="currentColor"
+                d="M21.462 5.691h-3.176L12.355 0l-.98 1.021 4.867 4.67H5.2L10 1.017 9.013.003l-5.84 5.688H0v1.415h.855l1.365 8.78a2.488 2.488 0 0 0 2.41 2.065h12.111a2.507 2.507 0 0 0 2.422-2.057l1.44-8.788h.86zm-3.7 9.974a1.1 1.1 0 0 1-1.025.871H4.629a1.087 1.087 0 0 1-1.012-.867l-1.33-8.563h16.882z" />
+            </svg>
+          </button>
+        </div>
+      </div>
     </div>
-  </nav>
+  </div>
 </header>
