--- a/src/app/html/pages/home.hbs
+++ b/src/app/html/pages/home.hbs
@@ -32,54 +32,9 @@
         <a class="infinite-link-dark" href='browse-sneakers.html'>View All</a>
       </div>
       <div class="col-12 releases-container">
-        <div class="releases-item">
-          <a href='example.html' class="releases-item-link">
-            <img class="releases-image" src="../assets/images/releases/releases-1.jpg" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="releases-item">
-          <a href='example.html' class="releases-item-link">
-            <img class="releases-image" src="../assets/images/releases/releases-2.jpg" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="releases-item">
-          <a href='example.html' class="releases-item-link">
-            <img class="releases-image" src="../assets/images/releases/releases-3.jpg" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="releases-item">
-          <a href='example.html' class="releases-item-link">
-            <img class="releases-image" src="../assets/images/releases/releases-4.jpg" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="releases-item">
-          <a href='example.html' class="releases-item-link">
-            <img class="releases-image" src="../assets/images/releases/releases-5.jpg" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
-        <div class="releases-item">
-          <a href='example.html' class="releases-item-link">
-            <img class="releases-image" src="../assets/images/releases/releases-6.jpg" alt="sneakers">
-            <p class="releases-title">Adidas Yeezy 500</p>
-            <p class="releases-value">&#36;330 Value</p>
-            <p class="releases-cost">&#36;130</p>
-          </a>
-        </div>
+        {{#each home.products}}
+          {{>blocks/product-card}}
+        {{/each}}
       </div>
     </div>
   </section>
