--- a/src/app/styles/pages/homepage.scss
+++ b/src/app/styles/pages/homepage.scss
@@ -164,8 +164,10 @@
 }
 
 .releases-container {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  grid-gap: 35px 15px;
+  width: 100%;
   margin: 70px 0 0;
 }
 
@@ -213,19 +215,12 @@
   font-size: 12px;
 }
 
-@media (min-width: 993px) and (max-width: 1199px) {
-  .releases-item {
-    width: calc(100% / 6);
-  }
-}
-
 @media screen and (max-width: 992px) {
   main {
     overflow: hidden;
   }
 
   .releases-item {
-    width: calc((100% / 3) - 30px);
     margin: 0 0 15px;
   }
 
@@ -257,7 +252,7 @@
 
 @media screen and (max-width: 568px) {
   .releases-item {
-    width: calc(100% / 2);
+    //width: calc(100% / 2);
   }
 
   .releases-image {
